fix: align icons

--- a/styles.scss
+++ b/styles.scss
@@ -45,10 +45,23 @@ main h2 {
 }
 
 // Icon links (ORCID, GitHub, globe)
-// remove underline from image-only links
+// remove underline from icon and image-only links
 
-a:has(> img) {
+a:has(> img),
+a:has(> i.bi) {
   text-decoration: none;
+}
+
+// Align Bootstrap Icons with surrounding 16px img icons
+
+a i.bi {
+  font-size: 1rem;
+  vertical-align: middle;
+}
+
+img[src*="orcid"],
+img[src*="github"] {
+  vertical-align: middle;
 }
 
 
